[gd_scene load_steps=17 format=3 uid="uid://dd0kham0vgye6"]

[ext_resource type="Script" uid="uid://cgptds56vy7k1" path="res://Scripts/game.gd" id="1_ln1c5"]
[ext_resource type="Texture2D" uid="uid://bb4c8bmvjc8af" path="res://ComPuzzle Assets/buttons/WALK/Walk.png" id="3_rku1e"]
[ext_resource type="Texture2D" uid="uid://cwyomwbqxj00e" path="res://ComPuzzle Assets/buttons/TURNLEFT/Turn_Left.png" id="4_rfjv2"]
[ext_resource type="Texture2D" uid="uid://boljr71gjawpo" path="res://ComPuzzle Assets/buttons/TURNRIGHT/Turn_Right.png" id="5_1phco"]
[ext_resource type="Script" uid="uid://cwxre8kpmj7hi" path="res://Scripts/command_list.gd" id="5_awy3j"]
[ext_resource type="Script" uid="uid://djiyhpf2cilsw" path="res://Scripts/spawnButtons.gd" id="5_g6tuc"]
[ext_resource type="Texture2D" uid="uid://cc75frmpp3gb4" path="res://ComPuzzle Assets/buttons/LOOP/Loop.png" id="6_nb51f"]
[ext_resource type="Texture2D" uid="uid://cj3ka2w0d6bb0" path="res://ComPuzzle Assets/buttons/ENDLOOP/EndLoop.png" id="7_nnt18"]
[ext_resource type="Texture2D" uid="uid://cl3h3685m0akx" path="res://ComPuzzle Assets/buttons/IF/If.png" id="8_ewbju"]
[ext_resource type="Texture2D" uid="uid://c6ulp76m6cvph" path="res://ComPuzzle Assets/buttons/ENDIF/EndIf.png" id="9_85qyi"]
[ext_resource type="Texture2D" uid="uid://c4n2jn14q7fc2" path="res://ComPuzzle Assets/buttons/ELSE/ElseButton.png" id="10_iivbl"]
[ext_resource type="Texture2D" uid="uid://jriqneluvhn6" path="res://ComPuzzle Assets/buttons/Run_Button.png" id="10_su6ef"]
[ext_resource type="PackedScene" uid="uid://crub3q5lo4g2r" path="res://Scenes/Function_Maker.tscn" id="13_rfjv2"]
[ext_resource type="PackedScene" uid="uid://cnapfcrjygfn0" path="res://Scenes/Help_Windows/help_menu.tscn" id="14_1phco"]
[ext_resource type="PackedScene" uid="uid://b3fk4grjwfapc" path="res://Scenes/Victory.tscn" id="15_nb51f"]

[sub_resource type="LabelSettings" id="LabelSettings_nb51f"]
font_size = 53
font_color = Color(1, 0, 0, 1)

[node name="Game" type="Node2D"]
script = ExtResource("1_ln1c5")
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(873, 491)
scale = Vector2(2, 5)
zoom = Vector2(1.01, 1.01)
metadata/_edit_lock_ = true

[node name="Buttons" type="GridContainer" parent="."]
offset_left = 475.0
offset_top = 879.0
offset_right = 1015.0
offset_bottom = 943.0
scale = Vector2(2, 2)
size_flags_horizontal = 6
size_flags_vertical = 6
columns = 20
script = ExtResource("5_g6tuc")

[node name="WalkButton" type="TextureButton" parent="Buttons"]
layout_mode = 2
texture_normal = ExtResource("3_rku1e")

[node name="LeftButton" type="TextureButton" parent="Buttons"]
layout_mode = 2
texture_normal = ExtResource("4_rfjv2")

[node name="RightButton" type="TextureButton" parent="Buttons"]
layout_mode = 2
texture_normal = ExtResource("5_1phco")

[node name="LoopButton" type="TextureButton" parent="Buttons"]
layout_mode = 2
texture_normal = ExtResource("6_nb51f")

[node name="EndLoopButton" type="TextureButton" parent="Buttons"]
layout_mode = 2
texture_normal = ExtResource("7_nnt18")

[node name="IfButton" type="TextureButton" parent="Buttons"]
layout_mode = 2
texture_normal = ExtResource("8_ewbju")

[node name="EndIfButton" type="TextureButton" parent="Buttons"]
layout_mode = 2
texture_normal = ExtResource("9_85qyi")

[node name="ElseButton" type="TextureButton" parent="Buttons"]
layout_mode = 2
texture_normal = ExtResource("10_iivbl")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_left = 1679.0
offset_right = 1758.0
offset_bottom = 420.0
scale = Vector2(2, 2)
follow_focus = true
metadata/_edit_lock_ = true

[node name="Command_List" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 3
script = ExtResource("5_awy3j")

[node name="OtherButtons" type="Node2D" parent="."]

[node name="Run_button" type="TextureButton" parent="OtherButtons"]
offset_left = 1679.0
offset_top = 879.0
offset_right = 1743.0
offset_bottom = 943.0
scale = Vector2(2, 2)
texture_normal = ExtResource("10_su6ef")
metadata/_edit_lock_ = true

[node name="Reset_Button" type="Button" parent="OtherButtons"]
offset_left = 114.0
offset_top = 897.0
offset_right = 214.0
offset_bottom = 997.0
text = "RESET"
metadata/_edit_lock_ = true

[node name="Quit_Button" type="Button" parent="OtherButtons"]
offset_top = 897.0
offset_right = 100.0
offset_bottom = 997.0
text = "QUIT"
metadata/_edit_lock_ = true

[node name="nextMap" type="Button" parent="OtherButtons"]
offset_left = 342.0
offset_top = 897.0
offset_right = 442.0
offset_bottom = 997.0
text = "NEXT MAP"
metadata/_edit_lock_ = true

[node name="Clear_List" type="Button" parent="OtherButtons"]
offset_left = 228.0
offset_top = 897.0
offset_right = 328.0
offset_bottom = 997.0
text = "CLEAR LIST"
metadata/_edit_lock_ = true

[node name="Make a Func" type="Button" parent="OtherButtons"]
offset_left = -86.0
offset_top = 800.0
offset_right = 14.0
offset_bottom = 900.0
text = "MAKE A FUNCTION"
autowrap_mode = 2
metadata/_edit_lock_ = true

[node name="HELP" type="Button" parent="OtherButtons"]
offset_left = -52.0
offset_top = -39.0
offset_right = 48.0
offset_bottom = 61.0
text = "HELP"
autowrap_mode = 2
metadata/_edit_lock_ = true

[node name="ErrorWindow" type="AcceptDialog" parent="."]
initial_position = 2
size = Vector2i(129, 140)

[node name="Label" type="Label" parent="ErrorWindow"]
offset_left = 8.0
offset_top = 8.0
offset_right = 121.0
offset_bottom = 91.0
text = "this is an error"
label_settings = SubResource("LabelSettings_nb51f")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="FunctionMakerWindow" parent="." instance=ExtResource("13_rfjv2")]
visible = false

[node name="HelpWindow" parent="." instance=ExtResource("14_1phco")]
visible = false

[node name="Victory" parent="." instance=ExtResource("15_nb51f")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 405.0
offset_top = 18.0
offset_right = 1385.0
offset_bottom = 1004.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="makeNode" from="Buttons" to="ScrollContainer/Command_List" method="_on_make_node"]
[connection signal="pressed" from="Buttons/WalkButton" to="Buttons" method="_on_walk_button_pressed"]
[connection signal="pressed" from="Buttons/LeftButton" to="Buttons" method="_on_left_button_pressed"]
[connection signal="pressed" from="Buttons/RightButton" to="Buttons" method="_on_right_button_pressed"]
[connection signal="pressed" from="Buttons/LoopButton" to="Buttons" method="_on_loop_button_pressed"]
[connection signal="pressed" from="Buttons/EndLoopButton" to="Buttons" method="_on_end_loop_button_pressed"]
[connection signal="pressed" from="Buttons/IfButton" to="Buttons" method="_on_if_button_pressed"]
[connection signal="pressed" from="Buttons/EndIfButton" to="Buttons" method="_on_end_if_button_pressed"]
[connection signal="pressed" from="Buttons/ElseButton" to="Buttons" method="_on_else_button_pressed"]
[connection signal="checkGoal" from="ScrollContainer/Command_List" to="." method="checkGoal"]
[connection signal="reset" from="ScrollContainer/Command_List" to="." method="_on_command_list_reset"]
[connection signal="showError" from="ScrollContainer/Command_List" to="." method="show_error"]
[connection signal="walk_signal" from="ScrollContainer/Command_List" to="." method="botControl"]
[connection signal="pressed" from="OtherButtons/Run_button" to="ScrollContainer/Command_List" method="validate"]
[connection signal="pressed" from="OtherButtons/Reset_Button" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="OtherButtons/Quit_Button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="OtherButtons/nextMap" to="." method="switch_map"]
[connection signal="pressed" from="OtherButtons/Clear_List" to="ScrollContainer/Command_List" method="clearList"]
[connection signal="pressed" from="OtherButtons/Make a Func" to="." method="_on_make_a_func_pressed"]
[connection signal="pressed" from="OtherButtons/HELP" to="." method="_on_help_pressed"]
[connection signal="change" from="Victory" to="." method="switch_map"]
[connection signal="replay" from="Victory" to="." method="Replay"]
